--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- Preload the Noto Sans SC font file (it seems to be a single file for weights 400, 500, 700 for this Google Fonts request) -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/notosanssc/v36/k3kXo84MPvpLmixcA63oeALZKL-cXys_I_VO.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    
     <title>React App</title>
   </head>
   <body>
